@@ -50,48 +50,6 @@
  * Pre-processor definitions
  ****************************************************************************/
 
-/* Configuration ************************************************************/
-
-#ifndef CONFIG_NXTK_BORDERWIDTH
-#  define CONFIG_NXTK_BORDERWIDTH 4
-#endif
-
-#ifndef CONFIG_NXTK_BORDERCOLOR1
-#  if !defined(CONFIG_NX_DISABLE_32BPP) || !defined(CONFIG_NX_DISABLE_24BPP)
-#    define CONFIG_NXTK_BORDERCOLOR1 0x00a9a9a9
-#  elif !defined(CONFIG_NX_DISABLE_16BPP)
-#    define CONFIG_NXTK_BORDERCOLOR1 0xad55
-#  elif !defined(CONFIG_NX_DISABLE_4BPP)
-#    define CONFIG_NXTK_BORDERCOLOR1 6
-#  else
-#    define CONFIG_NXTK_BORDERCOLOR1 'B'
-#  endif
-#endif
-
-#ifndef CONFIG_NXTK_BORDERCOLOR2
-#  if !defined(CONFIG_NX_DISABLE_32BPP) || !defined(CONFIG_NX_DISABLE_24BPP)
-#    define CONFIG_NXTK_BORDERCOLOR2 0x00696969
-#  elif !defined(CONFIG_NX_DISABLE_16BPP)
-#    define CONFIG_NXTK_BORDERCOLOR2 0x6b4d
-#  elif !defined(CONFIG_NX_DISABLE_4BPP)
-#    define CONFIG_NXTK_BORDERCOLOR2 4
-#  else
-#    define CONFIG_NXTK_BORDERCOLOR2 'b'
-#  endif
-#endif
-
-#ifndef CONFIG_NXTK_BORDERCOLOR3
-#  if !defined(CONFIG_NX_DISABLE_32BPP) || !defined(CONFIG_NX_DISABLE_24BPP)
-#    define CONFIG_NXTK_BORDERCOLOR3 0x00d9d9d9
-#  elif !defined(CONFIG_NX_DISABLE_16BPP)
-#    define CONFIG_NXTK_BORDERCOLOR3 0xdedb
-#  elif !defined(CONFIG_NX_DISABLE_4BPP)
-#    define CONFIG_NXTK_BORDERCOLOR3 8
-#  else
-#    define CONFIG_NXTK_BORDERCOLOR3 'S'
-#  endif
-#endif
-
 /****************************************************************************
  * Public Types
  ****************************************************************************/
